Correções no input range

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
                 <span class="sliderValue" style="font-size: 2rem;">&#128528</span>
             </div>
             <div class="field">
-                <span class="value min" style="font-size: 2rem;">&#128557</span>
-                <input type="range" min="1" max="200" value="25" class="slider">
-                <span class="value max" style="font-size: 2rem;">&#129321</span>
+                <span class="value min" style="font-size: 1.5rem;">&#128557</span>
+                <input type="range" min="20" max="180" value="100" class="slider">
+                <span class="value max" style="font-size: 1.5rem;">&#129321</span>
             </div>
         </div>
       
         <textarea maxlength="351" class="note-input"></textarea>
-        <button class="button">Registrar humor</button>
-        <button class="button">Como eu estava me sentindo a um tempo atrás?</button>
+        <button class="button register">Registrar humor</button>
+        <button class="button historic">Como eu estava me sentindo a um tempo atrás?</button>
     </main>
 
     <script src="js/main.js"></script>
