Horário e botao de deletar nas notas passadas

--- a/index.html
+++ b/index.html
@@ -32,14 +32,17 @@
             </div>
           
             <textarea maxlength="351" class="note-input"></textarea>
-            <button class="button register">Registrar humor</button>
-            <button class="button historic">Como eu estava me sentindo a um tempo atrás?</button>
+            <section class="main-buttons">
+                <button class="button historic">Como eu estava me sentindo a um tempo atrás?</button>
+                <button class="button register">Registrar humor</button>
+
+            </section>
         </section>
         
     </main>
 
-    <script src="js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="js/main.js"></script>
     <script
       src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
       data-auto-a11y="true"
