Estilização da página

--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como estou hoje?</title>
+    <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
     <main class="main">
-        <section class="previous-notes">
+        <section class="previous-notes glass">
             <span class="close-button"><i class="far fa-times-circle" close-button></i></span>
             <ul class="notes-list">
             </ul>
         </section>
-        <section class="main-section">
+        <section class="main-section glass">
             <div class="title">
                 <h1 class="title__main">Como estou hoje?</h1>
                 <h2 class="title__description">Selecione seu estado de humor e, se quiser, escreva uma nota detalhando melhor como está se sentindo.</h2>
@@ -31,7 +33,7 @@
                 </div>
             </div>
           
-            <textarea maxlength="320" class="note-input"></textarea>
+            <textarea maxlength="320" class="note-input" placeholder="Escreva aqui como você está se sentindo..."></textarea>
             <section class="main-buttons">
                 <button class="button historic">Como eu estava me sentindo a um tempo atrás?</button>
                 <button class="button register">Registrar humor</button>
